<resources>
    <string name="app_name">Cehro India</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Centre for Education and Health Research Organization, founded on 12th March 2012, is a non-profit making autonomous body registered under 1860 Societies Act. It is a social venture formed by the students from NSIT, JAMIA, IIIT etc. and has evolved into an organization where the motto is to help anyone with a will to achieve but is held back by lack of resources.</string>

    <string name="hello_blank_fragment1">CEHRO believes in not letting poverty come in way of success. We strive to make lives better for the impoverished people and the neglected in our society- the migrant laborers and workers involved in other menial jobs, by helping children from these families achieve academically and extracurricularly, so that they can build a better future for themselves.</string>

    <string name="hello_blank_fragment2">For all round development it is essential to consider health as an important parameter. Often health issues come in the way of a child’s education. Hence, we at CEHRO consider it important to sensitize them towards health and hygiene.</string>

    <string name="Our_Vision1">‘Realising the Dream of a Dignified and Respectful Life with the aid of Education and Health to Underprivileged Children.’</string>
    <string name="Our_Vision2"> * To bring slum children enrolled in government schools at par with private school children by giving them remedial classes</string>
    <string name="Our_Vision3"> * To make slum children excel in Computer Education and Spoken English by giving the essential resources</string>
    <string name="Our_Vision4"> * To enroll dropped-out slum children in bridge courses to give them a better future</string>
    <string name="Our_Vision5"> * To promote ‘volunteerism’ and ‘teaching skills’ in slum children through our various programmes</string>
    <string name="Our_Vision6"> * To nurture practice of healthy hygiene activities in slums by engaging doctors and other medical professionals</string>

    <string name="Our_Vision">Overview</string>

    <string name="Over">Overview</string>
    <string name="vision">Our Vision</string>
    <string name="Team">Our Team</string>


    <string name="Title_Educating_India">Educating India</string>
    <string name="Description_Educating_India">Unless every Indian irrespective of his/her socio-economic background get education India can’t be ‘educated’. Keeping this into consideration, we aim to provide education to children ageing between 6-18 years irrespective of their status of being enrolled with any formal educational institution or not.
    We provide remedial classes to ‘enrolled’ students while bridge courses to drop-outs. We follow the curriculum of NCERT for both the categories of students.
    Parent-teacher meeting is keep component of it. Through which we not only attempt to ensure parents’ involvement in their wards’ education but also use this platform to make them aware of education and its importance. More than 300 children have benefited directly from Educating india programme since 2012.</string>

    <string name="Title_Padho_Padhao">Padho-Padhao Programme</string>
    <string name="Description_Padho_Padhao">Under this programme, we aim to nurture ‘volunteerism’ and ‘teaching skills’ of students. This will also help those students in building their self-confidence and grow as individual.
    So, we engage some of the senior students (senior and senior secondary students) in imparting education to junior students enrolled in primary education on the basis of their willingness and class-performances. Since 2013, 25 of our students get benefitted from this.</string>

    <string name="Title_Livelihood">Livelihood Programme</string>
    <string name="Description_Livelihood">Spoken English and Computer education are the two key components of employability, now a day. Therefore, under our livelihood programme, we attempt to make underprivileged youths (ageing between 18-35 years) employable through Spoken English in collaboration with TEACH INDIA while hand-in experience of MS Office as computer education from our own experts.
    British Council and Times of India group are behind Teach India programme. Besides, we also work on personality development of the students. Since 2014, this programme has benefitted 70 students till today.</string>

    <string name="Title_Target_Twenty">Target Twenty 20</string>
    <string name="Description_Target_twenty">In the ‘digitized world’ of today, computer education has become need of hour for every individual. This has motivated us to come up with our ‘Target 20 Twenty’ programme.
Under this programme, we provide basic knowledge of computer to all students enroll with us from our experienced and technocrat volunteers.</string>

    <string name="Title_Health">Health And Hygiene Practices</string>
    <string name="Description_Health">Our clientele are the ones who mostly reside in the slums in unhealthy and unhygienic conditions, therefore, very prone to health hazards.
    Keeping this into consideration, knowledge and practice of hygiene activities has been identified as the best possible and feasible option to be or remain be healthy.
    We engage doctors or medical professionals in this and attempt to make sure that every of our students get benefitted of this.</string>

    <string name="Title_Artistic_India">Artistic India</string>
    <string name="Description_Artistic_India">Harnessing the talent of children enrolled with us; in extra-curricular activities, is also one of our prime motives as we believe that exposure to extra-curricular activities (music, dance, painting etc.) is a must for ‘holistic development’.
    Thus, we arrange special classes for music, dance and painting for all our students. Some of these students are very talented whom we specially provide more opportunities and a platform to nurture their skill further and showcase their talent to the world because anyhow, poverty should not be the barrier to one’s growth and success in life.</string>

    <string name="Vol">Volunteer</string>
    <string name="Donate">Donate</string>


    <string name="Resp">Responsibility</string>
    <string name="Resp1">For our generous donors who wish to contribute more to our organisation, we have yearly plans for sponsoring education of one or more students. Sponsors can schedule monthly meetings to check progress of their sponsored students.</string>
    <string name="Resp2">Sponsor a child’s education and contribute in the making of an empowered citizenship. Your donations and involvement are deeply valued by us.</string>



    <string name="Csr">CSR</string>
    <string name="Csr1">Today, companies are proactively investing in social cause(s) through Corporate Social Responsibility (CSR). Though  the people in corporate sector have a strong will to dedicate their resources for a social cause, they find it difficult to reach the right people considering the demography and diverse social problems of the nation.</string>






    <string name="Csr2">We actively seek volunteers who can contribute to our programs, help in fundraising, organize events and support in campaigns.</string>

    <string name="lostpassword">Connect with Pradeep on Facebook<a href="https://www.facebook.com/chaudharypradeep0212?fref=ts" target="_top">nnnn</a></string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Phone No.</string>
    <string name="btn_sign_up">Mail </string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the phone no.</string>
    
    <string name="mr_surjeet_description">Ever since the inception of CEHRO in 2012, there has been an exponential growth in the number of slum children who joined our centre as well as in the count</string>
    <string name="mr_mustaque_description">Mod. Mustaque Siddiqui has a P.G. Diploma (Broadcast Technology) JMI and currently works as the Treasurers of CEHRO INDIA. He comes to CEHRO INDIA with 3 years experience.</string>
    <string name="mr_pradeep_description">Pradeep currently serves as the Program manager of CEHRO INDIA. He is currently working at Samsung India as a Software Engineer for last 1.5 years. Pradeep is graduated from Netaji Subhas Institute of Technology.</string>
    <string name="mr_saket_description">Saket kumar currently serves as secretary in CEHRO INDIA. He is graduated from MMEC with the degree in electrical engineering. He works 2 years as a project co-ordinator of S</string>
    <string name="mr_deepak_description">Deepak Iyer is a business graduate and has over 10 years of work experience. He has been associated with top MNCs during this journey and currently serves as the marketing</string>
    <string name="mr_amay_description">Amay currently serves as the Center Co-ordinator for CEHRO INDIA. He is currently working with Jabong.com as a software development Engineer. He is graduated from Netaji Subhas Institute of Technology.</string>

    <string name="title_aboutus">About Us</string>
    <string name="title_our_program">Our Program</string>
    <string name="title_get_involved">Get Involved</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_home">Cehro India</string>

    <string name="home_objective">&quot;To build a better India through realizing the dream of dignified life to the under privileged by catering their basic needs of Education Health &amp; livelihood.&quot;</string>
    <string name="home_objective1"> * Centre for Education and Health Research Organization (CEHRO INDIA) is a non-profit making autonomous body registered under 1860 Societies Act.</string>
    <string name="home_objective2"> * Founded in 2012 by the brain-child youths coming from premier institutes of India (IIT,DCE/NSIT, NUEPA, JNU, Jamia, DU, IPU etc.)</string>
    <string name="home_objective3"> * To work for the betterment of the marginalize, migrant &amp; Slum children &amp; community in term of their Education Health Hygiene &amp; Livelihood</string>
    <string name="home_journey1"> * Stated in 2012 with 40 kids in small room with Mission Education program</string>
    <string name="home_journey2"> * At present 400+ kids with 10 programs.</string>
    <string name="home_journey3"> * 75+ Students get placed in different company till now through our Livelihood program stared in 2014</string>
    <string name="home_journey4"> * Bigger big venue of capacity 500 kids &amp; 50 volunteer</string>
    <string name="home_journey5"> * Organize &amp; Participated in many national competition</string>
    <string name="home_next1"> * To Set up a Library with capacity of 500 children.</string>
    <string name="home_next2"> * Digital computer Centre of Capacity 100 students at time.</string>
    <string name="home_next3"> * Research Centre for science Technology &amp; innovation.</string>

</resources>
